# job_test

./: .env  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  database.db  docker-compose.yml  pyproject.toml  requirements.txt  Диаграмма без названия.drawio
checklists/: __init__.py  common.py  config.py  config.yaml  dada.py  database.db  database.py  di_containers.py  exceptions.py  migration.py  models.py  test_db.py
checklists.egg-info/: PKG-INFO  SOURCES.txt
checklists/commands/: checklist.py  item.py
checklists/entities/: checklist.py  checklist_item.py
checklists/storages/: checklist_item_storage.py  checklist_storage.py
checklists/views/: checklists_handles.py  items_handles.py
tests/: conftest.py  test_api_error_orm.py  test_api_error_sql.py  test_checklist_commands.py  test_item_commands.py  test_items.py  test_operation_endpoint.py  test_orm_checklist_repo.py  test_web_app.py
wallet/: __init__.py  database.py  exceptions.py
wallet/commands/: command.py
wallet/entities/: wallet.py
wallet/migrations/: 001_create_table_001.py
wallet/storages/: wallet_storage.py
wallet/views/: wallet_handles.py
