[tool.black]
exclude = "/(.venv)"
line-length = 79
target-version = ["py39"]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files.html
combine_as_imports = true
force_grid_wrap = 2
include_trailing_comma = true
lines_after_imports = -1
lines_between_types = 1
profile = "black"
skip_gitignore = true
skip_glob = [".venv/*", "maps/*"]
use_parentheses = true

[tool.autoflake]
exclude = [".venv", "maps/*"]
in-place = true
quiet = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true


[project] 
name = "test"
dependencies = [
    "annotated-types==0.7.0",
    "blinker==1.9.0",
    "click==8.2.1",
    "Flask==3.1.1",
    "Flask-Pydantic==0.13.1",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "packaging==25.0",
    "peewee==3.18.1",
    "pip==23.0.1",
    "pluggy==1.6.0",
    "postgres==4.0",
    "psycopg2-binary==2.9.10",
    "psycopg2-pool==1.2",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "pytest==8.4.1",
    "setuptools==66.1.1",
    "typing_extensions==4.14.1",
    "typing-inspection==0.4.1",
    "Werkzeug==3.1.3"
]


# dependencies = [
#     "blinker==1.9.0",
#     "click==8.2.1",
#     "Flask==3.1.1",
#     "Flask-Pydantic==0.13.1",
#     "itsdangerous==2.2.0",
#     "Jinja2==3.1.6",
#     "iniconfig==2.1.0",
#     "packaging==25.0",
#     "MarkupSafe==3.0.2",
#     "Werkzeug==3.1.3",
#     "recursive-diff",
#     "PyYaml", 
#     "peewee",
#     "inject",
#     "pydantic",
#     "psycopg2"

# ]


version = "0.0.1"


# dependencies =[
#     "annotated-types==0.7.0",
#     "blinker==1.9.0",
#     "click==8.2.1",
#     "Flask==3.1.1",
#     "Flask-Pydantic==0.13.1",
#     "iniconfig==2.1.0",
#     "itsdangerous==2.2.0",
#     "Jinja2==3.1.6",
#     "MarkupSafe==3.0.2",
#     "packaging==25.0",
#     "peewee==3.18.1",
#     "pip==23.0.1",
#     "pluggy==1.6.0",
#     "postgres==4.0",
#     "psycopg2-binary==2.9.10",
#     "psycopg2-pool==1.2",
#     "pydantic==2.11.7",
#     "pydantic_core==2.33.2",
#     "Pygments==2.19.2",
#     "pytest==8.4.1",
#     "setuptools==66.1.1",
#     "typing_extensions==4.14.1",
#     "typing-inspection==0.4.1",
#     "Werkzeug==3.1.3"
# ]